--- a/parse-explore.cabal
+++ b/parse-explore.cabal
@@ -48,7 +48,7 @@ executable parse-explore
   main-is: Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules: Naive, Unger, RightRecursiveToProductive, Common, Types, Heur, Grammar, Earley
+  other-modules: Naive, Unger, RightRecursiveToProductive, Common, Types, Heur, Grammar, Earley, Greibach
                  ,Data.Trie,Data.Trie.BitTwiddle,Data.Trie.ByteStringInternal
                  ,Data.Trie.Convenience,Data.Trie.Errors,Data.Trie.Internal
 
